<package>
  <name>pr2eus</name>
  <description>
     pr2eus
  </description>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">furuta</author>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">furuta</maintainer>
  <license>BSD</license>
  <version>0.0.0</version>
  <url>http://ros.org/wiki/pr2eus</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roseus</build_depend>
  <build_depend>euscollada</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roseus</run_depend>
  <run_depend>euscollada</run_depend>
  <run_depend>pr2_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>

