<package>
  <name>pr2eus_moveit</name>
  <version>0.2.1</version>
  <description>pr2eus_moveit</description>
  <maintainer email="youhei@jsk.t.u-tokyo.ac.jp">YoheiKakiuchi</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2eus_moveit</url>
  <!-- <url type="bugtracker"></url> -->

  <author>YoheiKakiuchi</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2eus</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>roseus</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2eus</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>roseus</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pr2eus</test_depend> -->
  <!-- <test_depend>moveit_msgs</test_depend> -->
  <!-- <test_depend>control_msgs</test_depend> -->

</package>
