<package>
  <name>pr2eus_tutorials</name>
  <version>0.3.15</version>
  <description>pr2eus_tutorials</description>

  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="murooka@jsk.imi.i.u-tokyo.ac.jp">Masaki Murooka</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2eus_tutorials</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2eus</build_depend>
  <build_depend>jsk_pcl_ros</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>app_manager</run_depend>
  <run_depend>eusurdf</run_depend>
  <run_depend>pr2_gazebo</run_depend>
  <run_depend>pr2eus</run_depend>
  <run_depend>roseus_tutorials</run_depend>
  <run_depend>image_view2</run_depend>
  <run_depend>jsk_pcl_ros</run_depend>
  <run_depend>jsk_interactive_marker</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>jsk_rviz_plugins</run_depend>
  <run_depend>jsk_pr2_startup</run_depend>
  <run_depend>jsk_maps</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <test_depend>rostest</test_depend>
  <!-- <test_depend>pr2_interactive_manipulation</test_depend> -->

  <export>
    <app_manager app_dir="${prefix}/apps"/>
  </export>

</package>
