<package format="3">
  <name>pr2eus_tutorials</name>
  <version>0.3.15</version>
  <description>pr2eus_tutorials</description>

  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="murooka@jsk.imi.i.u-tokyo.ac.jp">Masaki Murooka</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2eus_tutorials</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2eus</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>app_manager</exec_depend>
  <exec_depend>eusurdf</exec_depend>
  <!-- gazebo is not available on ROS-O -->
  <exec_depend condition="($ROS_DISTRO != debian) and ($ROS_DISTRO != one)">pr2_gazebo</exec_depend>
  <exec_depend>pr2eus</exec_depend>
  <exec_depend>roseus_tutorials</exec_depend>
  <exec_depend>image_view2</exec_depend>
  <exec_depend>jsk_pcl_ros</exec_depend>
  <exec_depend>jsk_interactive_marker</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>
  <!-- jsk_pr2_startup is provided from jsk_robot, this is circular dependency -->
  <exec_depend condition="($ROS_DISTRO != debian) and ($ROS_DISTRO != one)">jsk_pr2_startup</exec_depend>
  <!-- jsk_maps is provided from jsk_demos, this is circular dependency -->
  <exec_depend condition="($ROS_DISTRO != debian) and ($ROS_DISTRO != one)">jsk_maps</exec_depend>
  <exec_depend>jsk_pcl_ros</exec_depend>

  <!-- Dependencies needed only for running tests. -->
  <test_depend>rostest</test_depend>
  <!-- <test_depend>pr2_interactive_manipulation</test_depend> -->

  <export>
    <app_manager app_dir="${prefix}/apps"/>
  </export>

</package>
